--- a/src/global.css
+++ b/src/global.css
@@ -14,7 +14,7 @@
 * {
   margin: 0;
   padding: 0;
-  box.sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -23,7 +23,10 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-body, input, textarea, button {
+body,
+input,
+textarea,
+button {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 1rem;
